--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -10,8 +10,8 @@
 }
 
 .carousel-caption{
-    top:50%;
-    transform:translateY(-20%);
+    right:50%;
+    transform:translateY(-60%);
 }
 
 .carousel-inner {
